<resources>
    <string name="app_name">JulienAndroidERestaurant</string>
    <string name="entr_es">Entrées</string>
    <string name="plats">Plats</string>
    <string name="droidrestaurant">DroidRestaurant</string>
    <string name="desserts">Desserts</string>
    <string name="lire">lire</string>
    <string name="notifier">notifier</string>
    <string name="uuid">uuid</string>
    <string name="proprietes">proprietes</string>
    <string name="ecrire">ecrire</string>
    <string name="type_chara">type_chara</string>
    <string name="service">service</string>
    <string name="derouler">derouler</string>
    <string name="uuidservice">uuidService</string>
    <string name="fake_title">fake_title</string>
    <string name="fake_quantity">fake_quantity</string>
    <string name="quantit">Quantité</string>
    <string name="total">Total</string>
    <string name="fake_price">fake_price</string>
    <string name="mac_address">Mac Address</string>
    <string name="device_name">Device Name</string>
    <string name="rssi">RSSI</string>
    <string name="nom">nom</string>
    <string name="prix">prix</string>
    <string name="prixtotal">PrixTotal</string>
    <string name="total_du_panier">Total du panier</string>
    <string name="valider_mon_panier">Valider mon panier</string>
    <string name="name">Name</string>
    <string name="ingr_dients">Ingrédients</string>
    <string name="commander">Commander</string>
    <string name="_0">0</string>
    <string name="lancer_le_scan_ble">Lancer le Scan BLE</string>
    <string name="statut">statut</string>
    <string name="valeur">Valeur :</string>
    <string name="francky_vincent_le_restaurant">Francky Vincent : Le Restaurant</string>
    <string name="dessertstitle">DESSERTS</string>
    <string name="scan_ble">SCAN BLE</string>
    <string name="image_pour_afficher_le_rssi">image pour afficher le rssi</string>
    <string name="bouton_play_ou_pause">bouton play ou pause</string>
    <string name="image_du_panier">image du panier</string>
    <string name="trashcan">trashcan</string>
    <string name="le_vrai_president">le vrai president</string>
</resources>